seraphim/system/keycloak/keycloak-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames:
    - "sso.scarey.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /realms/external
        - path:
            type: PathPrefix
            value: /resources
      backendRefs:
        - name: keycloak-service
          port: 8080
